[tool.poetry]
name = "awesome-science-web"
version = "0.1.0"
description = ""
authors = ["deverte <deverte@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^6.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
